# treet

./: CLAUDE.md  LICENSE  README.md
treet-ps/: pyproject.toml  treet.py
treet-py/: README.md  pyproject.toml
treet-py/src/treet/: __init__.py
treet-py/src/treet_ps/: __init__.py
